--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -35,7 +35,7 @@
     "extract-text-webpack-plugin": "3.0.0",
     "aurelia-webpack-plugin": "^2.0.0-rc.4",
     "webpack": "3.5.5",
-    "webpack-dev-server": "2.7.1",
+    "webpack-dev-server": ">=3.1.11",
     "expose-loader": "0.7.3",
     "style-loader": "0.18.2",
     "url-loader": "0.5.8",
